# toxcore

./: .travis.yml  CMakeLists.txt
cmake/: FindCheck.cmake  FindConfig.cmake  FindNaCl.cmake  FindOpus.cmake  config.h.in
other/bootstrap_daemon/src/: tox-bootstrapd.c
